--- a/code/style.css
+++ b/code/style.css
@@ -30,6 +30,21 @@ header.mobile {
   z-index: 2;
 }
 
+.mobile-wrap-item1 {
+  width: 8rem;
+  text-align: left;
+}
+
+.mobile-wrap-item2 {
+  width: 8rem;
+  text-align: center;
+}
+
+.mobile-wrap-item3 {
+  width: 8rem;
+  text-align: right;
+}
+
 .logo-mobile {
   height: 3rem;
   padding-top: 0.5rem;
@@ -220,6 +235,10 @@ time {
   display: inline-block;
   padding: 0 1rem 0.3rem 1rem;
   font-size: 1rem;
+}
+
+.ticker-item img {
+  width: 2rem;
 }
 
 /* END Header with ticker always visible */
