--- a/code/style.css
+++ b/code/style.css
@@ -10,32 +10,35 @@ height: 100%;
 }
 
 .header-container {
-   
   display: grid;
   grid-template-columns: 1fr;
 }
 
-.left-header {
-  
-}
-
 .right-header {
-  
   display: none;
 }
 
 .main-news {
-  
   display: grid;
   grid-template-columns: 1fr;
+  margin: 1em 0 1em 0;
 }
 
-.left-main {
-  
+.left-main img {
+  width: 100%;
+  height: 100%;
 }
 
+.left-header {
+  display: flex;
+  justify-content: center;
+}
 .right-main {
   
+}
+
+.right-main p{
+  font-size: 12px;
 }
 
 .small-news {
@@ -44,20 +47,34 @@ height: 100%;
   grid-template-columns: 1fr;
 }
 
-.small-box{
-   
+.small-box, .left-main {
+box-shadow: 2.2px 4.5px 4.5px rgba(122, 115, 96, 0.43);
 }
 
 .small-box img {
   width: 100%;
   height: 100%;
+  grid-gap: 1em;
 }
 
 
 @media (min-width: 668px) {
   .header-container {
     grid-template-columns: 1fr 1fr;
+    grid-gap: 1em;
   }
+  
+  .left-header {
+    justify-content:flex-start;
+  }
+
+
+  .left-header img {
+  height: 300px;
+  width: 300px;
+  
+  }
+
   .right-header {
     display:block;
   }
@@ -70,8 +87,13 @@ height: 100%;
     grid-template-columns: 1fr 1fr;
   }
   .main-news {
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 2fr 3fr;
+    grid-gap: 1em;
   }
+  .right-main p{
+    font-size: 20px;
+  }
+  
 }
 
 @media (min-width: 1080px) {
@@ -79,5 +101,4 @@ height: 100%;
     grid-template-columns: repeat(4, 1fr);
     
   }
-  
 }
