renamed animation effect

--- a/code/style.css
+++ b/code/style.css
@@ -126,7 +126,7 @@ a:hover {
       -webkit-text-fill-color: transparent;
 }
 
-@keyframes expandHeader {
+@keyframes expandLogo {
     to {
         transform: scaleX(1)
     }
