--- a/code/style.css
+++ b/code/style.css
@@ -4,6 +4,7 @@ html {
   }
 body {
   margin:0;
+  box-sizing: border-box;
 }
 
   .nav ul{
@@ -14,13 +15,14 @@ body {
    /*navigation bar is not responsive*/
   .nav ul li a{
     text-decoration: none;
-    color: black;
+    font-family: 'Rajdhani', sans-serif;
+    color: whitesmoke;
     padding: 1.5rem;
-    transition: all .7s ease;
+        transition: all .7s ease;
    }
    .nav ul li a:hover{
-     color: thistle;
-     background: tomato;
+     color: rgb(58, 9, 58);
+     
    }
 
   .header{
@@ -60,6 +62,8 @@ p {
 
 .image {
   width: 100%; 
+  object-fit: cover;
+  height: 15rem;
   
 }
  
@@ -67,7 +71,7 @@ p {
   .cell-1 {
     grid-column: span 2;
     padding: 2rem;
-    background-color: rgb(185, 67, 185);
+    background-color: lightgray;
     box-shadow: 10px 15px 5px -4px rgb(68, 67, 67);
     /*cell-1 should have some text, that is shown only in tablet size*/
 
@@ -81,7 +85,7 @@ p {
     }
   .cell-3, .cell-4, .cell-5, .cell-6, .cell-7, .cell-8{
     background-color:rgb(236, 179, 236);
-        padding: 1rem;
+    padding: 1rem;
     box-shadow: 10px 15px 5px -4px rgb(68, 67, 67);
   }
   /* mobile */
